--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Tier List Actrices</title>
+  <title>Tier List de Actrices</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f7f7f7;
+      background-color: #f4f4f4;
       padding: 20px;
     }
     .tier {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     .tier h2 {
       margin: 0;
@@ -19,15 +20,24 @@
     .tier-list {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 15px;
       padding: 10px;
       background-color: white;
       border: 1px solid #ccc;
     }
     .tier-item {
-      background-color: #eee;
-      padding: 8px 12px;
-      border-radius: 6px;
+      text-align: center;
+      width: 120px;
+    }
+    .tier-item img {
+      width: 100px;
+      height: 100px;
+      border-radius: 8px;
+      object-fit: cover;
+    }
+    .tier-item span {
+      display: block;
+      margin-top: 6px;
       font-weight: bold;
     }
     .S { background-color: #e6005c; }
@@ -44,47 +54,40 @@
   <div class="tier">
     <h2 class="S">Tier S</h2>
     <div class="tier-list">
-      <div class="tier-item">Riley Reid</div>
-      <div class="tier-item">Lana Rhoades</div>
-      <div class="tier-item">Mia Malkova</div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Riley_Reid_2019.jpg/220px-Riley_Reid_2019.jpg" alt="Riley Reid">
+        <span>Riley Reid</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Lana_Rhoades_2020.jpg/220px-Lana_Rhoades_2020.jpg" alt="Lana Rhoades">
+        <span>Lana Rhoades</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Mia_Malkova_2019.jpg/220px-Mia_Malkova_2019.jpg" alt="Mia Malkova">
+        <span>Mia Malkova</span>
+      </div>
     </div>
   </div>
 
   <div class="tier">
     <h2 class="A">Tier A</h2>
     <div class="tier-list">
-      <div class="tier-item">Abella Danger</div>
-      <div class="tier-item">Angela White</div>
-      <div class="tier-item">Adriana Chechik</div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Abella_Danger_2019.jpg/220px-Abella_Danger_2019.jpg" alt="Abella Danger">
+        <span>Abella Danger</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Angela_White_2020.jpg/220px-Angela_White_2020.jpg" alt="Angela White">
+        <span>Angela White</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Adriana_Chechik_2020.jpg/220px-Adriana_Chechik_2020.jpg" alt="Adriana Chechik">
+        <span>Adriana Chechik</span>
+      </div>
     </div>
   </div>
 
-  <div class="tier">
-    <h2 class="B">Tier B</h2>
-    <div class="tier-list">
-      <div class="tier-item">Emily Willis</div>
-      <div class="tier-item">Brandi Love</div>
-      <div class="tier-item">Nicole Aniston</div>
-    </div>
-  </div>
-
-  <div class="tier">
-    <h2 class="C">Tier C</h2>
-    <div class="tier-list">
-      <div class="tier-item">Elsa Jean</div>
-      <div class="tier-item">Autumn Falls</div>
-      <div class="tier-item">Gina Valentina</div>
-    </div>
-  </div>
-
-  <div class="tier">
-    <h2 class="D">Tier D</h2>
-    <div class="tier-list">
-      <div class="tier-item">Violet Myers</div>
-      <div class="tier-item">Lexi Belle</div>
-      <div class="tier-item">Tori Black</div>
-    </div>
-  </div>
+  <!-- Puedes seguir agregando tiers con el mismo formato -->
 
 </body>
 </html>
