--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Tier List de Actrices</title>
+  <title>Tier List de Actrices - Actualizada</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -49,10 +49,11 @@
 </head>
 <body>
 
-  <h1>Tier List de Actrices Reconocidas</h1>
+  <h1>Tier List de Actrices Reconocidas y Promesas</h1>
 
+  <!-- Tier S -->
   <div class="tier">
-    <h2 class="S">Tier S</h2>
+    <h2 class="S">Tier S - Leyendas actuales</h2>
     <div class="tier-list">
       <div class="tier-item">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Riley_Reid_2019.jpg/220px-Riley_Reid_2019.jpg" alt="Riley Reid">
@@ -69,8 +70,9 @@
     </div>
   </div>
 
+  <!-- Tier A -->
   <div class="tier">
-    <h2 class="A">Tier A</h2>
+    <h2 class="A">Tier A - Éxito sostenido</h2>
     <div class="tier-list">
       <div class="tier-item">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Abella_Danger_2019.jpg/220px-Abella_Danger_2019.jpg" alt="Abella Danger">
@@ -87,7 +89,45 @@
     </div>
   </div>
 
-  <!-- Puedes seguir agregando tiers con el mismo formato -->
+  <!-- Tier B -->
+  <div class="tier">
+    <h2 class="B">Tier B - Emergentes con gran futuro</h2>
+    <div class="tier-list">
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/Violet_Myers_2021.jpg/220px-Violet_Myers_2021.jpg" alt="Violet Myers">
+        <span>Violet Myers</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Autumn_Falls_AVN_2020.jpg/220px-Autumn_Falls_AVN_2020.jpg" alt="Autumn Falls">
+        <span>Autumn Falls</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Emily_Willis_2019.jpg/220px-Emily_Willis_2019.jpg" alt="Emily Willis">
+        <span>Emily Willis</span>
+      </div>
+    </div>
+  </div>
 
+  <!-- Tier C -->
+  <div class="tier">
+    <h2 class="C">Tier C - Nuevas promesas a seguir</h2>
+    <div class="tier-list">
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Gina_Valentina_2019.jpg/220px-Gina_Valentina_2019.jpg" alt="Gina Valentina">
+        <span>Gina Valentina</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Elsa_Jean_2019.jpg/220px-Elsa_Jean_2019.jpg" alt="Elsa Jean">
+        <span>Elsa Jean</span>
+      </div>
+      <div class="tier-item">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Kendra_Sunderland_2020.jpg/220px-Kendra_Sunderland_2020.jpg" alt="Kendra Sunderland">
+        <span>Kendra Sunderland</span>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
 </body>
 </html>
